--- a/CSS/Aula03/index.html
+++ b/CSS/Aula03/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Aula 03 - CSS</title>
 </head>
 <body>
-    
+    <h1>Olá</h1>
+    <p>Página da aula</p>
 </body>
 </html>
