--- a/Front/Aula02/Atividade02/ex1.html
+++ b/Front/Aula02/Atividade02/ex1.html
@@ -7,8 +7,9 @@
     
 </head>
 <body>
-  
+    <div id="conteudo" ></div>
+    <button onclick="mudaCor()">Clique aqui</button>
        
 </body>
-      <script src="script.js"></script>
+      <script src="script1.js"></script>
 </html>
